# api/swaggerui/swagger.json
@@ -22,12 +22,36 @@
   "basePath": "/catalog-api/v1/",
   "paths": {
     "/categories/": {
-      "post": {
-        "description": "Create a category to use in product catalog",
+      "put": {
+        "description": "Update category to link with a product",
         "tags": [
           "categories"
         ],
-        "summary": "Create a category.",
+        "summary": "Update category.",
+        "operationId": "updateCategory",
+        "parameters": [
+          {
+            "description": "request model to update category",
+            "name": "UpdateCategoryRequest",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UpdateCategoryRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/categoryResponse"
+          }
+        }
+      },
+      "post": {
+        "description": "Create category to link with a product",
+        "tags": [
+          "categories"
+        ],
+        "summary": "Create category.",
         "operationId": "createCategory",
         "parameters": [
           {
@@ -42,18 +66,57 @@
         ],
         "responses": {
           "200": {
-            "$ref": "#/responses/categoryRes"
+            "$ref": "#/responses/categoryResponse"
+          }
+        }
+      }
+    },
+    "/health-check/": {
+      "get": {
+        "description": "Consult if api its alive",
+        "tags": [
+          "health-check"
+        ],
+        "summary": "Health Check.",
+        "operationId": "healthCheck",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/helthCheckResponse"
           }
         }
       }
     },
     "/products/": {
-      "post": {
-        "description": "Create a product in catalog",
+      "put": {
+        "description": "Update product in catalog",
         "tags": [
           "products"
         ],
-        "summary": "Create a product.",
+        "summary": "Update product.",
+        "operationId": "updateProduct",
+        "parameters": [
+          {
+            "description": "request model to update product",
+            "name": "UpdateProductRequest",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UpdateProductRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/productResponse"
+          }
+        }
+      },
+      "post": {
+        "description": "Create product in catalog",
+        "tags": [
+          "products"
+        ],
+        "summary": "Create product.",
         "operationId": "createProduct",
         "parameters": [
           {
@@ -68,13 +131,54 @@
         ],
         "responses": {
           "200": {
-            "$ref": "#/responses/productRes"
+            "$ref": "#/responses/productResponse"
+          }
+        }
+      }
+    },
+    "/products/active/": {
+      "put": {
+        "description": "If product its active this enpoint can inactive",
+        "tags": [
+          "products"
+        ],
+        "summary": "Active product.",
+        "operationId": "activeProduct",
+        "parameters": [
+          {
+            "description": "request model to inactive product",
+            "name": "InactiveProductRequest",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/InactiveProductRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/productResponse"
           }
         }
       }
     }
   },
   "definitions": {
+    "ActiveProductRequest": {
+      "description": "ActiveProductRequest request type",
+      "type": "object",
+      "required": [
+        "id"
+      ],
+      "properties": {
+        "id": {
+          "description": "identification to active product",
+          "type": "string",
+          "x-go-name": "ID"
+        }
+      },
+      "x-go-package": "github.com/NicolasDeveloper/store-catalog-api/api/controllers/requests"
+    },
     "CategoryResponse": {
       "description": "CategoryResponse category view model",
       "type": "object",
@@ -97,17 +201,25 @@
     "CreateCategorytRequest": {
       "description": "CreateCategorytRequest for creation of product",
       "type": "object",
+      "required": [
+        "name",
+        "path"
+      ],
       "properties": {
         "name": {
+          "description": "this field will appear in the catalog section title",
           "type": "string",
           "x-go-name": "Name"
         },
         "parent_category_id": {
+          "description": "this field will be used to link categories tree",
           "type": "string",
           "x-go-name": "ParentCategoryID"
         },
         "path": {
+          "description": "this field will be used to find a specific category in URI",
           "type": "string",
+          "uniqueItems": true,
           "x-go-name": "Path"
         }
       },
@@ -123,7 +235,7 @@
       ],
       "properties": {
         "categories": {
-          "description": "the categories for this product",
+          "description": "this field will be used to link product with categories",
           "type": "array",
           "items": {
             "type": "string"
@@ -131,14 +243,44 @@
           "x-go-name": "Categories"
         },
         "description": {
-          "description": "the description for this product",
+          "description": "product description",
           "type": "string",
           "x-go-name": "Description"
         },
         "name": {
-          "description": "the name for this product",
+          "description": "product name",
           "type": "string",
           "x-go-name": "Name"
+        }
+      },
+      "x-go-package": "github.com/NicolasDeveloper/store-catalog-api/api/controllers/requests"
+    },
+    "HelthCheckResponse": {
+      "description": "HelthCheckResponse response",
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "version": {
+          "type": "string",
+          "x-go-name": "Version"
+        }
+      },
+      "x-go-package": "github.com/NicolasDeveloper/store-catalog-api/api/controllers/responses"
+    },
+    "InactiveProductRequest": {
+      "description": "InactiveProductRequest request type",
+      "type": "object",
+      "required": [
+        "id"
+      ],
+      "properties": {
+        "id": {
+          "description": "product identification",
+          "type": "string",
+          "x-go-name": "ID"
         }
       },
       "x-go-package": "github.com/NicolasDeveloper/store-catalog-api/api/controllers/requests"
@@ -161,31 +303,138 @@
         }
       },
       "x-go-package": "github.com/NicolasDeveloper/store-catalog-api/api/controllers/responses"
+    },
+    "ResponseData": {
+      "description": "ResponseData object response",
+      "type": "object",
+      "properties": {
+        "data": {
+          "description": "generic response data",
+          "type": "object",
+          "x-go-name": "Data"
+        },
+        "success": {
+          "description": "this field indicates if everything has gone with success",
+          "type": "boolean",
+          "x-go-name": "Success"
+        }
+      },
+      "x-go-package": "github.com/NicolasDeveloper/store-catalog-api/api/controllers/responses"
+    },
+    "UpdateCategoryRequest": {
+      "description": "UpdateCategoryRequest Update category",
+      "type": "object",
+      "required": [
+        "name",
+        "path",
+        "id"
+      ],
+      "properties": {
+        "id": {
+          "description": "category identification",
+          "type": "string",
+          "x-go-name": "ID"
+        },
+        "name": {
+          "description": "this field will appear in the catalog section title",
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "parent_category_id": {
+          "description": "this field will be used to link categories tree",
+          "type": "string",
+          "x-go-name": "ParentCategoryID"
+        },
+        "path": {
+          "description": "this field will be used to find a specific category in URI",
+          "type": "string",
+          "uniqueItems": true,
+          "x-go-name": "Path"
+        }
+      },
+      "x-go-package": "github.com/NicolasDeveloper/store-catalog-api/api/controllers/requests"
+    },
+    "UpdateProductRequest": {
+      "description": "UpdateProductRequest Update product",
+      "type": "object",
+      "required": [
+        "name",
+        "description",
+        "categories",
+        "id"
+      ],
+      "properties": {
+        "categories": {
+          "description": "this field will be used to link product with categories",
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Categories"
+        },
+        "description": {
+          "description": "product description",
+          "type": "string",
+          "x-go-name": "Description"
+        },
+        "id": {
+          "description": "category identification",
+          "type": "string",
+          "x-go-name": "ID"
+        },
+        "name": {
+          "description": "product name",
+          "type": "string",
+          "x-go-name": "Name"
+        }
+      },
+      "x-go-package": "github.com/NicolasDeveloper/store-catalog-api/api/controllers/requests"
     }
   },
   "responses": {
-    "categoryReq": {
-      "description": "CreateCategorytRequest response payload",
+    "categoryResponse": {
+      "description": "ResponseData response payload",
       "schema": {
-        "$ref": "#/definitions/CreateCategorytRequest"
+        "type": "object",
+        "properties": {
+          "data": {
+            "$ref": "#/definitions/CategoryResponse"
+          },
+          "success": {
+            "type": "boolean",
+            "x-go-name": "Success"
+          }
+        }
       }
     },
-    "categoryRes": {
-      "description": "CategoryResponse response payload",
+    "defaultResponse": {
+      "description": "ResponseData response payload",
       "schema": {
-        "$ref": "#/definitions/CategoryResponse"
+        "$ref": "#/definitions/ResponseData"
       }
     },
-    "productReq": {
-      "description": "CreateProductRequest response payload",
+    "helthCheckResponse": {
+      "description": "HelthCheckResponse payload response",
       "schema": {
-        "$ref": "#/definitions/CreateProductRequest"
+        "$ref": "#/definitions/HelthCheckResponse"
+      },
+      "headers": {
+        "Body": {}
       }
     },
-    "productRes": {
-      "description": "ProductResponse response payload",
+    "productResponse": {
+      "description": "ResponseData response payload",
       "schema": {
-        "$ref": "#/definitions/ProductResponse"
+        "type": "object",
+        "properties": {
+          "data": {
+            "$ref": "#/definitions/ProductResponse"
+          },
+          "success": {
+            "type": "boolean",
+            "x-go-name": "Success"
+          }
+        }
       }
     }
   }
